# gamelingo

./: .gitignore  README.md  config.json.example  pyproject.toml
src/gamelingo/: __init__.py  __main__.py  config.py  display.py  gamepad.py  gui.py  hotkey_dialog.py  hotkeys.py  tts.py  utils.py
src/screentranslate/: __main__.py  capture.py  config.py  gamepad.py  gui.py  hotkeys.py  ocr.py  translate.py  tts.py
